# cadaver

./: .codespellrc  .cvsignore  .gitignore  .gitmodules  .release.sh  .update-po.sh  BUGS  ChangeLog  Makefile.in  NEWS  README  README.md  autogen.sh  configure.ac  configure.in
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cadaver/tags/0.22.3/: Makefile.in  NEWS  cadaver.spec.in
cadaver/tags/0.22.3/debian/: README.debian  control
cadaver/tags/0.22.3/doc/: cadaver.1
cadaver/tags/0.22.3/lib/: glob.h
cadaver/tags/0.22.3/lib/expat/xmltok/: xmltok.c
cadaver/tags/0.22.3/po/: Makevars  en@quot.po
cadaver/tags/0.22.3/src/: cadaver.c  commands.h  edit.c  ls.c  search.c
cadaver/tags/0.22.4/: NEWS  THANKS  cadaver.lsm.in  configure.ac
cadaver/tags/0.22.4/lib/: dirname.c
cadaver/tags/0.22.4/po/: es.po
cadaver/tags/0.22.4/src/: cadaver.c
cadaver/tags/0.22.5/: configure.ac
cadaver/tags/0.22.5/lib/expat/xmltok/: latin1tab.h
cadaver/tags/0.22.5/src/: cadaver.c  cadaver.h  common.h  options.h
cadaver/tags/0.23.0/: NEWS  configure.ac
cadaver/tags/0.23.0/lib/expat/xmltok/: asciitab.h
cadaver/tags/0.23.0/po/: POTFILES.in
cadaver/tags/0.23.0/src/: cadaver.c
cadaver/tags/0.23.1/: Makefile.in  configure.ac
cadaver/tags/0.23.1/lib/: yesno.c
cadaver/tags/0.23.1/lib/expat/xmltok/: xmltok_impl.c
cadaver/tags/0.23.1/src/: common.c  common.h
cadaver/tags/0.23.2/: .update-po.sh  ChangeLog  INTEROP  Makefile.in  TODO
cadaver/tags/0.23.2/lib/: getpass.c  getpass.h  glob.c
cadaver/tags/0.23.2/lib/expat/: ChangeLog
cadaver/tags/0.23.2/lib/expat/xmlparse/: hashtable.c
cadaver/tags/0.23.2/m4/: README  readline.m4  strftime.m4
cadaver/tags/0.23.2/po/: it.po
cadaver/tags/0.23.2/src/: cadaver.h  i18n.h  ls.c  options.c  utils.h
cadaver/tags/0.23.3/: FAQ  THANKS  configure.ac
cadaver/tags/0.23.3/m4/: prereq.m4
cadaver/tags/0.23.3/po/: LINGUAS  POTFILES.in  cadaver.pot  es.po
cadaver/tags/0.23.3/src/: cadaver.c  cmdline.h  options.c  utils.c  version.c
cadaver/trunk/: .update-po.sh  BUGS  Makefile.in  NEWS  autogen.sh  configure.ac  configure.in
cadaver/trunk/debian/: manpage.1.ex  menu  rules
cadaver/trunk/doc/: cadaver.1
cadaver/trunk/expat/xmltok/: iasciitab.h  xmldef.h
cadaver/trunk/lib/: mkstemp.c  rpmatch.c  tempname.c
cadaver/trunk/lib/expat/: expat.html
cadaver/trunk/lib/expat/gennmtab/: gennmtab.c
cadaver/trunk/lib/expat/xmlparse/: xmlparse.c  xmlparse.h
cadaver/trunk/lib/expat/xmltok/: xmlrole.h  xmltok.h
cadaver/trunk/po/: .cvsignore  Makevars  POTFILES.in  cadaver.pot  en@quot.po  es.po  it.po
cadaver/trunk/src/: cadaver.c  cadaver.h  cmdline.c  commands.c  common.h  edit.c  ls.c  search.c  utils.c  version.c
debian/: changelog  copyright
doc/: cadaver.1
expat/: README
lib/: fnmatch.c  getpass.c  glob.c  mkstemp.c  netrc.c  netrc.h  snprintf.c  snprintf.h  tempname.c  yesno.c
lib/expat/xmlparse/: hashtable.h
lib/expat/xmltok/: utf8tab.h  xmlrole.c  xmltok_impl.h
m4/: readline.m4
m4/neon/: neon.m4
po/: LINGUAS  Makevars  POTFILES.in  cadaver.pot  en@quot.po  es.po  it.po
src/: cadaver.c  cadaver.h  cmdline.c  commands.c  commands.h  common.h  edit.c  ls.c  options.c  options.h  search.c  utils.c  version.c
